@startuml
class Checkers
class Board
class Turn
class Player
class Token
class Coordinate
class Square
class Movement
class SimpleMovement
class Color
class Goal
class RemoveAllRivalTokens

Checkers *-- Board
Checkers *-- "2" Turn
Turn *-- "2" Player
Player o-- Goal
Goal <|-- RemoveAllRivalTokens
Goal ..> Token
Player *-- "20" Token
Board *-- "40" Token
Board *-- "8x8" Square
Token *--> Color
Color <|-- B
Color <|-- W
Player ..> Movement
Movement ..> Token
Movement ..> Square
Movement <|--- SimpleMovement
Movement <|-- AttackMovement
Movement <|--- QueenMovement
Movement <|-- QueenAttack
Token <|-- Queen
Token <|-- Simple
Square *-- Coordinate

@enduml
